[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/main menu/rsz_credit.png" type="Texture" id=1]
[ext_resource path="res://ui/main menu/rsz_exit.png" type="Texture" id=2]
[ext_resource path="res://ui/main menu/rsz_start.png" type="Texture" id=3]
[ext_resource path="res://ui/menu.gd" type="Script" id=4]
[ext_resource path="res://ui/LoveYaLikeASister.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/main menu/rsz_picsart_22-10-23_07-28-36-066.png" type="Texture" id=6]
[ext_resource path="res://ui/main menu/rsz_1picsart_22-10-23_07-30-33-448.png" type="Texture" id=7]
[ext_resource path="res://ui/main menu/rsz_picsart_22-10-23_07-30-12-768.png" type="Texture" id=8]
[ext_resource path="res://ui/main menu/rsz_picsart_22-10-23_07-31-13-516.png" type="Texture" id=9]
[ext_resource path="res://ui/main menu/rsz_picsart_22-10-23_07-29-44-398.png" type="Texture" id=10]
[ext_resource path="res://ui/main menu/rsz_1picsart_22-10-23_07-29-44-398.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 144
font_data = ExtResource( 5 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -147.0
margin_right = 512.0
margin_bottom = -64.0
alignment = 1

[node name="Start" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_left = 137.0
margin_right = 384.0
margin_bottom = 83.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 11 )

[node name="Credit" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_left = 388.0
margin_right = 635.0
margin_bottom = 83.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Exit" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_left = 639.0
margin_right = 886.0
margin_bottom = 83.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.0
margin_top = -196.0
margin_right = 259.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "JUDUL"
align = 1

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credit" to="." method="_on_Credit_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
